--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
+    "@tanstack/react-form": "^1.0.5",
     "clsx": "^2.1.1",
     "framer-motion": "^12.4.10",
     "next": "15.2.1",
@@ -27,6 +28,6 @@
     "eslint": "^9",
     "eslint-config-next": "15.2.1",
     "tailwindcss": "^4.0.10",
-    "typescript": "^5"
+    "typescript": "^5.4"
   }
 }
