--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
     "@tanstack/react-form": "^1.0.5",
+    "@tanstack/react-query": "^5.68.0",
+    "@tanstack/react-query-devtools": "^5.68.0",
     "clsx": "^2.1.1",
+    "convex": "^1.20.0",
     "framer-motion": "^12.4.10",
     "next": "15.2.1",
     "next-themes": "^0.4.4",
