--- a/package.json
+++ b/package.json
@@ -11,16 +11,22 @@
   "dependencies": {
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
+    "@react-three/drei": "^10.0.4",
+    "@react-three/fiber": "^9.0.0-alpha.8",
     "@tanstack/react-form": "^1.0.5",
     "@tanstack/react-query": "^5.68.0",
     "@tanstack/react-query-devtools": "^5.68.0",
     "clsx": "^2.1.1",
     "convex": "^1.20.0",
     "framer-motion": "^12.4.10",
+    "motion": "^12.5.0",
     "next": "15.2.1",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "tailwind-merge": "^3.0.2",
+    "three": "^0.174.0",
+    "three-globe": "^2.42.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
