--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tanstack/react-form": "^1.0.5",
     "@tanstack/react-query": "^5.68.0",
     "@tanstack/react-query-devtools": "^5.68.0",
+    "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
     "clsx": "^2.1.1",
     "convex": "^1.20.0",
