--- a/package.json
+++ b/package.json
@@ -9,40 +9,40 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@headlessui/react": "^2.2.0",
+    "@headlessui/react": "^2.2.9",
     "@heroicons/react": "^2.2.0",
-    "@react-three/drei": "^10.0.4",
-    "@react-three/fiber": "^9.0.0-alpha.8",
-    "@szhsin/react-accordion": "^1.4.0",
-    "@tanstack/react-form": "^1.0.5",
-    "@tanstack/react-query": "^5.68.0",
-    "@tanstack/react-query-devtools": "^5.68.0",
-    "@vercel/analytics": "^1.5.0",
-    "@vercel/speed-insights": "^1.2.0",
+    "@react-three/drei": "^10.7.7",
+    "@react-three/fiber": "^9.4.2",
+    "@szhsin/react-accordion": "^1.4.1",
+    "@tanstack/react-form": "^1.27.3",
+    "@tanstack/react-query": "^5.90.12",
+    "@tanstack/react-query-devtools": "^5.91.1",
+    "@vercel/analytics": "^1.6.1",
+    "@vercel/speed-insights": "^1.3.1",
     "clsx": "^2.1.1",
-    "convex": "^1.20.0",
-    "framer-motion": "^12.4.10",
-    "motion": "^12.5.0",
+    "convex": "^1.31.0",
+    "framer-motion": "^12.23.26",
+    "motion": "^12.23.26",
     "next": "15.2.1",
-    "next-themes": "^0.4.4",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "next-themes": "^0.4.6",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "react-google-recaptcha": "^3.1.0",
-    "resend": "^4.5.0",
-    "tailwind-merge": "^3.0.2",
+    "resend": "^4.8.0",
+    "tailwind-merge": "^3.4.0",
     "tailwind-scrollbar-hide": "^2.0.0",
-    "three-globe": "^2.42.4"
+    "three-globe": "^2.45.0"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@eslint/eslintrc": "^3.3.3",
+    "@tailwindcss/postcss": "^4.1.18",
+    "@types/node": "^20.19.26",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
     "@types/react-google-recaptcha": "^2.1.9",
-    "eslint": "^9",
+    "eslint": "^9.39.1",
     "eslint-config-next": "15.2.1",
-    "tailwindcss": "^4.0.10",
-    "typescript": "^5.4"
+    "tailwindcss": "^4.1.18",
+    "typescript": "^5.9.3"
   }
 }
