--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "resend": "^4.8.0",
     "tailwind-merge": "^3.4.0",
     "tailwind-scrollbar-hide": "^2.0.0",
+    "three": "0.182.0",
     "three-globe": "^2.45.0"
   },
   "devDependencies": {
@@ -40,6 +41,7 @@
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
     "@types/react-google-recaptcha": "^2.1.9",
+    "@types/three": "0.182.0",
     "eslint": "^9.39.1",
     "eslint-config-next": "15.2.1",
     "tailwindcss": "^4.1.18",
